--- a/views/admin/Customers.ejs
+++ b/views/admin/Customers.ejs
@@ -40,7 +40,7 @@
                         <% if (data[i].is_blocked === true) { %>
                           <button type="button" class="btn btn-danger btn-fw" onclick="showConfirmation('<%= data[i]._id %>', 'block')">Blocked</button>
                         <% } else { %>
-                          <button type="button" class="btn btn-success btn-fw" onclick="showConfirmation('<%= data[i]._id %>', 'unblock')">Unblock</button>
+                          <button type="button" class="btn btn-success btn-fw" onclick="showConfirmation('<%= data[i]._id %>', 'unblock')">Block</button>
                         <% } %>
 
 
