--- a/views/users/editCheckOutAddress.ejs
+++ b/views/users/editCheckOutAddress.ejs
@@ -4,48 +4,51 @@
 
 
 
-<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
-    <form action="" method="post" class="border rounded p-4" style="width: 530px; height: 685px">
-        <h5 class="text-center">Billing Details</h5>
-        <div class="form-group">
-            <label for="FullName">Full Name *</label>
-            <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px" value="<%= addresses.fullName %>">
-            <span class="error-message text-danger" id="fullNameError"></span>
-        </div>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+    <div class="col-md-6">
+        <form action="" method="post" onsubmit="return validateForm();" class="shadow p-3 mb-5 bg-body rounded">
+            <h5 class="text-center">Billing Details</h5>
+            <div class="form-group">
+                <label for="FullName">Full Name *</label>
+                <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px" value="<%= addresses.fullName %>" oninput="hideError('fullNameError')">
+                <span class="error-message text-danger" id="fullNameError"></span>
+            </div>
 
-        <div class="form-group">
-            <label for="country">Country *</label>
-            <input type="text" class= "form-control" id="country" name="country" style="height: 37px" value="<%= addresses.country %>">
-            <span class="error-message text-danger" id="countryError"></span>
-        </div>
+            <div class="form-group">
+                <label for="country">Country *</label>
+                <input type="text" class="form-control" id="country" name="country" style="height: 37px" value="<%= addresses.country %>" oninput="hideError('countryError')">
+                <span class="error-message text-danger" id="countryError"></span>
+            </div>
 
-        <div class="form-group">
-            <label for="city">City *</label>
-            <input type="text" class="form-control" id="city" name="city" style="height: 37px" value="<%= addresses.city %>" >
-            <span class="error-message text-danger" id="cityError"></span>
-        </div>
+            <div class="form-group">
+                <label for="city">City *</label>
+                <input type="text" class="form-control" id="city" name="city" style="height: 37px" value="<%= addresses.city %>" oninput="hideError('cityError')">
+                <span class="error-message text-danger" id="cityError"></span>
+            </div>
 
-        <div class="form-group">
-            <label for="state">State *</label>
-            <input type="text" class="form-control" id="state" name="state" style="height: 37px" value="<%= addresses.state %>" >
-            <span class="error-message text-danger" id="stateError"></span>
-        </div>
+            <div class="form-group">
+                <label for="state">State *</label>
+                <input type="text" class="form-control" id="state" name="state" style="height: 37px" value="<%= addresses.state %>" oninput="hideError('stateError')">
+                <span class="error-message text-danger" id="stateError"></span>
+            </div>
 
-        <div class="form-group">
-            <label for="pinCode">Pin Code *</label>
-            <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px" value="<%= addresses.pincode %>" >
-            <span class="error-message text-danger" id="pinCodeError"></span>
-        </div>
+            <div class="form-group">
+                <label for="pinCode">Pin Code *</label>
+                <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px" value="<%= addresses.pincode %>" oninput="hideError('pinCodeError')">
+                <span class="error-message text-danger" id="pinCodeError"></span>
+            </div>
 
-        <div class="form-group">
-            <label for="phone">Mobile *</label>
-            <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px" value="<%= addresses.mobile %>" >
-            <span class="error-message text-danger" id="phoneError"></span>
-        </div>
-        
-        <button type="submit" class="btn btn-primary">Register</button>
-        <input type="hidden" name="id" value="<%= addresses._id %>">
-    </form>
+            <div class="form-group">
+                <label for="phone">Mobile *</label>
+                <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px" value="<%= addresses.mobile %>" oninput="hideError('phoneError')">
+                <span class="error-message text-danger" id="phoneError"></span>
+            </div>
+
+            <button type="submit" class="btn btn-primary btn-block">Register</button>
+
+            <input type="hidden" name="id" value="<%= addresses._id %>">
+        </form>
+    </div>
 </div>
 
 
