--- a/views/users/mainLayout/mainFooter.ejs
+++ b/views/users/mainLayout/mainFooter.ejs
@@ -250,7 +250,7 @@
 	</script>
 <!--===============================================================================================-->
 	<script src="/static/userAssets/js/main.js"></script>
-	<script src="/static/userAssets/js/script.js"></script>
+	<script src="/static/userAssets/script.js"></script>
 
 
 <!-- ==================================================================================checkOut======================================================== -->
@@ -269,11 +269,12 @@
 
 
 	 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 	 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 	 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.1.0/dist/sweetalert2.min.js"></script>
-	
+	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+	 <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
 	
 
